fixed overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,14 +111,14 @@ button[type=submit]:active {
 
 #header {
     width: 100%;
-    height: 70px;
+    height: 10vh;
     background-color: rgba(0,0,0,0.7);
     text-align: center;
     margin-top: -21.44px;
 }
 
 #header h1 {
-    padding-top: 15px;
+    padding-top: 28px;
     color: white;
 }
 
@@ -136,7 +136,7 @@ button[type=submit]:active {
 
 #sheet {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-color: rgba(0,0,0,0.85);
 }
 
